chore(backups): Change backup working dir to main nfs pool (#109)
Change backup working dir to main nfs pool to accommodate growing size of backup dir.

Reviewed-on: https://git.kwkaiser.io/kwkaiser/homelab-application/pulls/109
Co-authored-by: Karl Kaiser <karl@kwkaiser.io>
Co-committed-by: Karl Kaiser <karl@kwkaiser.io>

--- a/templates/borgmatic/cron.yaml
+++ b/templates/borgmatic/cron.yaml
@@ -16,10 +16,6 @@ spec:
               persistentVolumeClaim:
                 claimName: bulk-nfs
 
-            - name: cache-data
-              persistentVolumeClaim:
-                claimName: cache-nfs
-
             - name: borgmatic-configs
               configMap:
                 name: borgmatic-configs
@@ -81,7 +77,7 @@ spec:
                 - name: bulk-data
                   mountPath: /bulk
 
-                - name: cache-data
+                - name: bulk-data
                   mountPath: /raw-backup
                   subPath: application/borgmatic/backup
 
@@ -149,11 +145,11 @@ spec:
                 - name: bulk-data
                   mountPath: /bulk
 
-                - name: cache-data
+                - name: bulk-data 
                   mountPath: /raw-backup
                   subPath: application/borgmatic/backup
 
-                - name: cache-data
+                - name: bulk-data
                   mountPath: /tar-dir
                   subPath: application/borgmatic/tardir
 
