chore(mealie): Retain mealie volume data (#124)
Reviewed-on: https://git.kwkaiser.io/kwkaiser/homelab-application/pulls/124

--- a/config/borgmatic/config.yaml
+++ b/config/borgmatic/config.yaml
@@ -10,6 +10,7 @@ source_directories:
   - /bulk/application/radarr
   - /bulk/application/sonarr
   - /bulk/application/immich/media
+  - /bulk/application/mealie/app
   - /bulk/application/syncthing
   - /bulk/shared/books
 
