--- a/templates/mealie/depl.yaml
+++ b/templates/mealie/depl.yaml
@@ -15,6 +15,11 @@ spec:
         app: mealie
         app.kubernetes.io/name: mealie
     spec:
+      volumes:
+          - name: data
+            persistentVolumeClaim:
+              claimName: bulk-nfs
+
       containers:
         - name: mealie
           image: {{ .Values.image_mealie }}
@@ -48,3 +53,8 @@ spec:
                 secretKeyRef:
                   name: mealie.db.password
                   key: value
+
+          volumeMounts:
+            - name: data
+              mountPath: /app/data
+              subPath: application/mealie/app
