--- a/values/shared.yaml
+++ b/values/shared.yaml
@@ -30,3 +30,4 @@ image_immich_ml: "ghcr.io/immich-app/immich-machine-learning:v1.108.0"
 image_immich_server: "ghcr.io/immich-app/immich-server:v1.108.0"
 image_mealie_db: "postgres:16.4-alpine3.19"
 image_mealie: "hkotel/mealie:v2.1.0"
+image_minecraft: "itzg/minecraft-server:latest"
