--- a/templates/minecraft/depl.yaml
+++ b/templates/minecraft/depl.yaml
@@ -40,6 +40,9 @@ spec:
             - name: MAX_MEMORY
               value: 4G
 
+            - name: DIFFICULTY
+              value: normal
+
           volumeMounts:
             - name: data
               mountPath: /data
