--- a/config/borgmatic/config.yaml
+++ b/config/borgmatic/config.yaml
@@ -44,7 +44,7 @@ postgresql_databases:
     password: ${MEALIE_DB_PASSWORD}
     format: tar
 
-ssh_command: ssh -o StrictHostKeyChecking=no -i /borgmatic-borgbase-key-2
+ssh_command: ssh -v -o StrictHostKeyChecking=no -i /borgmatic-borgbase-key-2
 
 repositories:
   - path: /raw-backup
