--- a/templates/borgmatic/cron.yaml
+++ b/templates/borgmatic/cron.yaml
@@ -105,8 +105,8 @@ spec:
               image: {{ .Values.image_borgmatic }}
 
               # command: ["/usr/local/bin/borgmatic"]
-              command: ["/bin/sh", "-c"]
-              args: ["cp /borgmatic-borgbase-key /borgmatic-borgbase-key-2; chmod 0600 /borgmatic-borgbase-key-2; /usr/local/bin/borgmatic info"]
+              command: ["sleep"]
+              args: ["9999999"]
 
               lifecycle:
                 preStop:
