--- a/templates/borgmatic/cron.yaml
+++ b/templates/borgmatic/cron.yaml
@@ -37,7 +37,7 @@ spec:
               image: {{ .Values.image_borgmatic }}
 
               command: ["/bin/sh", "-c"]
-              args: ["cp /borgmatic-borgbase-key /borgmatic-borgbase-key-2 && echo '' >> /borgmatic-borgbase-key-2 && chmod 0600 /borgmatic-borgbase-key-2 && /usr/local/bin/borgmatic recreate -e repokey"]
+              args: ["cp /borgmatic-borgbase-key /borgmatic-borgbase-key-2; echo '' >> /borgmatic-borgbase-key-2; chmod 0600 /borgmatic-borgbase-key-2; /usr/local/bin/borgmatic rcreate -e repokey"]
 
               env:
                 - name: BORG_PASSPHRASE
@@ -105,7 +105,7 @@ spec:
               image: {{ .Values.image_borgmatic }}
 
               command: ["/bin/sh", "-c"]
-              args: ["cp /borgmatic-borgbase-key /borgmatic-borgbase-key-2 && echo '' >> /borgmatic-borgbase-key-2 && chmod 0600 /borgmatic-borgbase-key-2 && /usr/local/bin/borgmatic create"]
+              args: ["cp /borgmatic-borgbase-key /borgmatic-borgbase-key-2; echo '' >> /borgmatic-borgbase-key-2; chmod 0600 /borgmatic-borgbase-key-2; /usr/local/bin/borgmatic create"]
 
               lifecycle:
                 preStop:
