--- a/templates/borgmatic/cron.yaml
+++ b/templates/borgmatic/cron.yaml
@@ -32,12 +32,12 @@ spec:
                     path: value
             {{- end }}
 
-          initContainers:
+          containers:
             - name: borgmatic-init
               image: {{ .Values.image_borgmatic }}
 
               command: ["/bin/sh", "-c"]
-              args: ["cp /borgmatic-borgbase-key /borgmatic-borgbase-key-2; echo '' >> /borgmatic-borgbase-key-2; chmod 0600 /borgmatic-borgbase-key-2; /usr/local/bin/borgmatic rcreate -e repokey"]
+              args: ["cp /borgmatic-borgbase-key /borgmatic-borgbase-key-2; echo '' >> /borgmatic-borgbase-key-2; chmod 0600 /borgmatic-borgbase-key-2; /usr/local/bin/borgmatic check"]
 
               env:
                 - name: BORG_PASSPHRASE
@@ -100,79 +100,79 @@ spec:
                   subPath: value
                   readOnly: true
 
-          containers:
-            - name: borgmatic-create
-              image: {{ .Values.image_borgmatic }}
+          # containers:
+          #   - name: borgmatic-create
+          #     image: {{ .Values.image_borgmatic }}
 
-              command: ["/bin/sh", "-c"]
-              args: ["cp /borgmatic-borgbase-key /borgmatic-borgbase-key-2; echo '' >> /borgmatic-borgbase-key-2; chmod 0600 /borgmatic-borgbase-key-2; /usr/local/bin/borgmatic create"]
+          #     command: ["/bin/sh", "-c"]
+          #     args: ["cp /borgmatic-borgbase-key /borgmatic-borgbase-key-2; echo '' >> /borgmatic-borgbase-key-2; chmod 0600 /borgmatic-borgbase-key-2; /usr/local/bin/borgmatic create"]
 
-              lifecycle:
-                preStop:
-                  exec:
-                    command: ["/usr/local/bin/borgmatic", "break-lock"]
+          #     lifecycle:
+          #       preStop:
+          #         exec:
+          #           command: ["/usr/local/bin/borgmatic", "break-lock"]
 
-              env:
-                - name: MINIFLUX_DB_PASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      name: miniflux.db.password
-                      key: value
+          #     env:
+          #       - name: MINIFLUX_DB_PASSWORD
+          #         valueFrom:
+          #           secretKeyRef:
+          #             name: miniflux.db.password
+          #             key: value
 
-                - name: GITEA_DB_PASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      name: gitea.db.password
-                      key: value
+          #       - name: GITEA_DB_PASSWORD
+          #         valueFrom:
+          #           secretKeyRef:
+          #             name: gitea.db.password
+          #             key: value
 
-                - name: IMMICH_DB_PASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      name: immich.db.password
-                      key: value
+          #       - name: IMMICH_DB_PASSWORD
+          #         valueFrom:
+          #           secretKeyRef:
+          #             name: immich.db.password
+          #             key: value
 
-                - name: MEALIE_DB_PASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      name: mealie.db.password
-                      key: value
+          #       - name: MEALIE_DB_PASSWORD
+          #         valueFrom:
+          #           secretKeyRef:
+          #             name: mealie.db.password
+          #             key: value
 
-                - name: LINODE_CLI_OBJ_ACCESS_KEY
-                  valueFrom:
-                    secretKeyRef:
-                      name: linode.cli.obj.access.key
-                      key: value
+          #       - name: LINODE_CLI_OBJ_ACCESS_KEY
+          #         valueFrom:
+          #           secretKeyRef:
+          #             name: linode.cli.obj.access.key
+          #             key: value
 
-                - name: LINODE_CLI_OBJ_SECRET_KEY
-                  valueFrom:
-                    secretKeyRef:
-                      name: linode.cli.obj.secret.key
-                      key: value
+          #       - name: LINODE_CLI_OBJ_SECRET_KEY
+          #         valueFrom:
+          #           secretKeyRef:
+          #             name: linode.cli.obj.secret.key
+          #             key: value
 
-                - name: BORG_PASSPHRASE
-                  valueFrom:
-                    secretKeyRef:
-                      name: backup.passphrase
-                      key: value
+          #       - name: BORG_PASSPHRASE
+          #         valueFrom:
+          #           secretKeyRef:
+          #             name: backup.passphrase
+          #             key: value
 
-              volumeMounts:
-                - name: bulk-data
-                  mountPath: /bulk
+          #     volumeMounts:
+          #       - name: bulk-data
+          #         mountPath: /bulk
 
-                - name: bulk-data 
-                  mountPath: /raw-backup
-                  subPath: application/borgmatic/backup
+          #       - name: bulk-data 
+          #         mountPath: /raw-backup
+          #         subPath: application/borgmatic/backup
 
-                - name: bulk-data
-                  mountPath: /tar-dir
-                  subPath: application/borgmatic/tardir
+          #       - name: bulk-data
+          #         mountPath: /tar-dir
+          #         subPath: application/borgmatic/tardir
 
-                - name: borgmatic-configs
-                  mountPath: /etc/borgmatic/config.yaml
-                  subPath: config.yaml
-                  readOnly: false
+          #       - name: borgmatic-configs
+          #         mountPath: /etc/borgmatic/config.yaml
+          #         subPath: config.yaml
+          #         readOnly: false
 
-                - name: borgmatic-borgbase-key 
-                  mountPath: /borgmatic-borgbase-key
-                  subPath: value
-                  readOnly: true
+          #       - name: borgmatic-borgbase-key 
+          #         mountPath: /borgmatic-borgbase-key
+          #         subPath: value
+          #         readOnly: true
