Push to net-new repo

--- a/config/borgmatic/config.yaml
+++ b/config/borgmatic/config.yaml
@@ -53,7 +53,7 @@ repositories:
     label: local
 
   # ssh://kwkaiser@localhost/home/kwkaiser/desktop/borgmatic-test/dest-remote
-  - path: ssh://w80na89t@w80na89t.repo.borgbase.com/./repo
+  - path: ssh://gyd00bnt@gyd00bnt.repo.borgbase.com/./repo
     label: borgbase
 
 checks:
