--- a/config/borgmatic/config.yaml
+++ b/config/borgmatic/config.yaml
@@ -87,10 +87,11 @@ before_compact:
 
 after_compact:
   - echo 'Ended compact'
-  - echo 'Summary stats:'
-  - borgmatic list --archive latest | tail -n +2  | awk '{ printf "%-20s %-10s\n", $4, $8 }' | sort -rh | head -n 10
-  - echo 'Creating and uploading backup file'
-  - apk update
-  - pip install s3cmd
-  - tar cf /tar-dir/{{ .Values.backupName}}.tar /raw-backup/*
-  - s3cmd put /tar-dir/{{ .Values.backupName }}.tar s3://borg-backup/{{ .Values.backupName }}.tar --access_key=${LINODE_CLI_OBJ_ACCESS_KEY} --secret_key=${LINODE_CLI_OBJ_SECRET_KEY} --host='borg-backup.us-east-1.linodeobjects.com' --host-bucket='borg-backup' --multipart-chunk-size-mb=100
+  - echo 'Transferring between repositories'
+  - borgmatic transfer --source-repository local --repository borgbase --progress
+  # - borgmatic list --archive latest | tail -n +2  | awk '{ printf "%-20s %-10s\n", $4, $8 }' | sort -rh | head -n 10
+  # - echo 'Creating and uploading backup file'
+  # - apk update
+  # - pip install s3cmd
+  # - tar cf /tar-dir/{{ .Values.backupName}}.tar /raw-backup/*
+  # - s3cmd put /tar-dir/{{ .Values.backupName }}.tar s3://borg-backup/{{ .Values.backupName }}.tar --access_key=${LINODE_CLI_OBJ_ACCESS_KEY} --secret_key=${LINODE_CLI_OBJ_SECRET_KEY} --host='borg-backup.us-east-1.linodeobjects.com' --host-bucket='borg-backup' --multipart-chunk-size-mb=100
