--- a/templates/borgmatic/cron.yaml
+++ b/templates/borgmatic/cron.yaml
@@ -39,12 +39,13 @@ spec:
 
               command: ["/bin/sh", "-c"]
               # Pad SSH key & attempt to break lock. If it doesn't exist, ignore 
-              args: >
-                "cp /borgmatic-borgbase-key /borgmatic-borgbase-key-2;" 
-                "echo '' >> /borgmatic-borgbase-key-2;" 
-                "chmod 0600 /borgmatic-borgbase-key-2;"
-                "/usr/local/bin/borgmatic break-lock || true;" 
-                "/usr/local/bin/borgmatic rcreate -e repokey"
+              args: 
+                - >
+                  "cp /borgmatic-borgbase-key /borgmatic-borgbase-key-2;" 
+                  "echo '' >> /borgmatic-borgbase-key-2;" 
+                  "chmod 0600 /borgmatic-borgbase-key-2;"
+                  "/usr/local/bin/borgmatic break-lock || true;" 
+                  "/usr/local/bin/borgmatic rcreate -e repokey"
 
               env:
                 - name: BORG_PASSPHRASE
@@ -112,11 +113,12 @@ spec:
               image: {{ .Values.image_borgmatic }}
 
               command: ["/bin/sh", "-c"]
-              args: >
-                "cp /borgmatic-borgbase-key /borgmatic-borgbase-key-2;"
-                "echo '' >> /borgmatic-borgbase-key-2;"
-                "chmod 0600 /borgmatic-borgbase-key-2;"
-                "/usr/local/bin/borgmatic create"
+              args: 
+                - > 
+                  "cp /borgmatic-borgbase-key /borgmatic-borgbase-key-2;"
+                  "echo '' >> /borgmatic-borgbase-key-2;"
+                  "chmod 0600 /borgmatic-borgbase-key-2;"
+                  "/usr/local/bin/borgmatic create"
 
               lifecycle:
                 preStop:
