--- a/templates/immich/depl.yaml
+++ b/templates/immich/depl.yaml
@@ -49,7 +49,7 @@ spec:
               value: '3003'
 
             - name: IMMICH_HOST
-              value: localhost
+              value: '0.0.0.0'
 
         - name: immich-server
           image: {{ .Values.image_immich_server }}
@@ -69,10 +69,10 @@ spec:
               value: '2283'
 
             - name: IMMICH_HOST
-              value: localhost
+              value: '0.0.0.0'
 
             - name: REDIS_HOSTNAME
-              value: localhost
+              value: '0.0.0.0'
 
             - name: UPLOAD_LOCATION
               value: /usr/src/app/upload
