--- a/config/borgmatic/config.yaml
+++ b/config/borgmatic/config.yaml
@@ -95,7 +95,7 @@ after_compact:
   - echo 'Ended compact'
   - apk update
   - apk add -U curl 
-  - curl -d "Completed server backup" ntf.sh/KAyIMTgBtdbI2uWHVZFS
+  - curl -d "Completed server backup" ntfy.sh/KAyIMTgBtdbI2uWHVZFS
   
 # - echo 'Creating and uploading backup file'
 # - apk update
